--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ authors = [
 dependencies = [
     "pandas>=2.1.3",
     "sqlalchemy>=2.0.23",
+    "networkx>=3.2.1",
 ]
 requires-python = ">=3.11"
 readme = "README.md"
