--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "pandas>=2.1.3",
     "sqlalchemy>=2.0.23",
     "networkx>=3.2.1",
+    "matplotlib>=3.8.2",
 ]
 requires-python = ">=3.11"
 readme = "README.md"
